--- a/sites/default/site-config/core.entity_form_display.node.cash_outflow.default.yml
+++ b/sites/default/site-config/core.entity_form_display.node.cash_outflow.default.yml
@@ -1,21 +1,16 @@
-uuid: 64e0f15a-5c33-4d24-b5ef-44d0f3777f25
+uuid: 2569c9d4-7e8d-4c75-96ab-b9a3a9ae090a
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.cash_inflow.body
-    - field.field.node.cash_inflow.field_ct_cashflow_amount
-    - field.field.node.cash_inflow.field_ct_cashflow_date
-    - field.field.node.cash_inflow.field_ct_cashflow_project
-    - field.field.node.cash_inflow.field_ct_service_type
-    - node.type.cash_inflow
+    - field.field.node.cash_outflow.body
+    - node.type.cash_outflow
   module:
-    - datetime
     - path
     - text
-id: node.cash_inflow.default
+id: node.cash_outflow.default
 targetEntityType: node
-bundle: cash_inflow
+bundle: cash_outflow
 mode: default
 content:
   body:
@@ -31,33 +26,6 @@ content:
     weight: 10
     settings: {  }
     third_party_settings: {  }
-  field_ct_cashflow_amount:
-    weight: 36
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: number
-  field_ct_cashflow_date:
-    weight: 37
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-  field_ct_cashflow_project:
-    weight: 34
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-  field_ct_service_type:
-    weight: 35
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
   path:
     type: path
     weight: 30
