--- a/sites/default/site-config/field.field.node.cash_inflow.field_ct_cashflow_date.yml
+++ b/sites/default/site-config/field.field.node.cash_inflow.field_ct_cashflow_date.yml
@@ -1,14 +1,14 @@
-uuid: 40920c57-fe57-4e4d-a714-a8bc0e42dc5a
+uuid: 26c2e12b-c3dd-423e-8130-3b989f3b6fd8
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_ct_cashinflow_date
+    - field.storage.node.field_ct_cashflow_date
     - node.type.cash_inflow
   module:
     - datetime
-id: node.cash_inflow.field_ct_cashinflow_date
-field_name: field_ct_cashinflow_date
+id: node.cash_inflow.field_ct_cashflow_date
+field_name: field_ct_cashflow_date
 entity_type: node
 bundle: cash_inflow
 label: Date
