--- a/sites/default/site-config/core.entity_view_display.node.cash_outflow.default.yml
+++ b/sites/default/site-config/core.entity_view_display.node.cash_outflow.default.yml
@@ -4,8 +4,16 @@ status: true
 dependencies:
   config:
     - field.field.node.cash_outflow.body
+    - field.field.node.cash_outflow.field_ct_cashflow_amount
+    - field.field.node.cash_outflow.field_ct_cashflow_date
+    - field.field.node.cash_outflow.field_ct_cashflow_project
+    - field.field.node.cash_outflow.field_ct_cashout_category
+    - field.field.node.cash_outflow.field_ct_cashout_sub_category
+    - field.field.node.cash_outflow.field_ct_cashoutflow_expend_type
     - node.type.cash_outflow
   module:
+    - datetime
+    - options
     - text
     - user
 id: node.cash_outflow.default
@@ -19,6 +27,49 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+  field_ct_cashflow_amount:
+    weight: 103
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
+  field_ct_cashflow_date:
+    weight: 102
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+  field_ct_cashflow_project:
+    weight: 104
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+  field_ct_cashout_category:
+    weight: 107
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+  field_ct_cashout_sub_category:
+    weight: 106
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+  field_ct_cashoutflow_expend_type:
+    weight: 105
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
   links:
     weight: 100
 hidden: {  }
