--- a/sites/default/site-config/core.extension.yml
+++ b/sites/default/site-config/core.extension.yml
@@ -9,6 +9,8 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  csv_data_upload: 0
+  custom_api: 0
   datetime: 0
   dblog: 0
   devel: 0
@@ -21,6 +23,7 @@ module:
   help: 0
   history: 0
   image: 0
+  kint: 0
   link: 0
   menu_ui: 0
   node: 0
