views creation for cash inflow and cash outflow

--- a/sites/default/site-config/core.entity_view_display.node.cash_inflow.teaser.yml
+++ b/sites/default/site-config/core.entity_view_display.node.cash_inflow.teaser.yml
@@ -23,4 +23,8 @@ content:
     third_party_settings: {  }
   links:
     weight: 100
-hidden: {  }
+hidden:
+  field_ct_cashflow_amount: true
+  field_ct_cashflow_date: true
+  field_ct_cashflow_project: true
+  field_ct_service_type: true
