--- a/sites/default/site-config/core.extension.yml
+++ b/sites/default/site-config/core.extension.yml
@@ -11,12 +11,14 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  form_overwrite: 0
   help: 0
   history: 0
   image: 0
