--- a/sites/default/site-config/core.extension.yml
+++ b/sites/default/site-config/core.extension.yml
@@ -24,6 +24,7 @@ module:
   history: 0
   image: 0
   kint: 0
+  libraries: 0
   link: 0
   menu_ui: 0
   node: 0
@@ -42,6 +43,7 @@ module:
   update: 0
   user: 0
   views_ui: 0
+  visualization: 0
   menu_link_content: 1
   views: 10
   standard: 1000
