--- a/sites/default/site-config/core.extension.yml
+++ b/sites/default/site-config/core.extension.yml
@@ -10,6 +10,7 @@ module:
   contact: 0
   contextual: 0
   csv_data_upload: 0
+  csv_serialization: 0
   custom_api: 0
   datetime: 0
   dblog: 0
@@ -33,7 +34,9 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  rest: 0
   search: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
