--- a/sites/default/site-config/core.extension.yml
+++ b/sites/default/site-config/core.extension.yml
@@ -21,6 +21,9 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  form_overwrite: 0
+  graph_report: 0
+  hello_world: 0
   help: 0
   history: 0
   image: 0
@@ -28,7 +31,6 @@ module:
   libraries: 0
   link: 0
   menu_ui: 0
-  monthly_mail: 0
   node: 0
   options: 0
   page_cache: 0
