--- a/sites/default/site-config/views.view.aaa.yml
+++ b/sites/default/site-config/views.view.aaa.yml
@@ -1,18 +1,16 @@
-uuid: 45956965-eeee-43a4-a10d-f9b48948cf68
+uuid: 6130c68c-c210-4970-ad42-24547240ad3b
 langcode: en
 status: true
 dependencies:
   config:
     - node.type.cash_inflow
-    - taxonomy.vocabulary.vocab_project
-    - taxonomy.vocabulary.vocab_service_type
   module:
     - node
     - taxonomy
     - user
     - visualization
-id: cash_inflow_bar_project
-label: 'Cash inflow bar project'
+id: aaa
+label: aaa
 module: views
 description: ''
 tag: ''
@@ -52,16 +50,29 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: none
+        type: mini
         options:
-          items_per_page: null
+          items_per_page: 10
           offset: 0
+          id: 0
+          total_pages: null
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          tags:
+            previous: ‹‹
+            next: ››
       style:
         type: visualization
         options:
           row_class: ''
-          default_row_class: true
-          type: bar
+          default_row_class: false
+          type: pie
           fields:
             name:
               enabled: 0
@@ -81,39 +92,54 @@ display:
           id: name
           table: taxonomy_term_field_data
           field: name
-          entity_type: taxonomy_term
-          entity_field: name
-          label: ''
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            trim: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            html: false
-          hide_empty: false
-          empty_zero: false
-          type: string
-          settings:
-            link_to_entity: true
-          plugin_id: term_name
           relationship: none
           group_type: group
           admin_label: ''
+          label: Project
           exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: false
+            ellipsis: false
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -125,6 +151,9 @@ display:
           separator: ', '
           field_api_classes: false
           convert_spaces: false
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: term_name
         field_ct_cashflow_amount:
           id: field_ct_cashflow_amount
           table: node__field_ct_cashflow_amount
@@ -132,7 +161,7 @@ display:
           relationship: reverse__node__field_ct_cashflow_project
           group_type: sum
           admin_label: ''
-          label: Amount
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -165,7 +194,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -173,14 +202,6 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          set_precision: false
-          precision: 0
-          decimal: .
-          separator: ''
-          format_plural: 0
-          format_plural_string: "1\x03@count"
-          prefix: ''
-          suffix: ''
           click_sort_column: value
           type: number_decimal
           settings:
@@ -189,26 +210,17 @@ display:
             decimal_separator: .
             scale: 2
           group_column: value
-          group_columns:
-            value: value
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
           multi_type: separator
+          separator: ', '
           field_api_classes: false
           plugin_id: field
       filters:
-        vid:
-          id: vid
-          table: taxonomy_term_field_data
-          field: vid
-          value:
-            vocab_project: vocab_project
-          entity_type: taxonomy_term
-          entity_field: vid
-          plugin_id: bundle
         type:
           id: type
           table: node_field_data
@@ -249,53 +261,8 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
-        field_ct_service_type_target_id:
-          id: field_ct_service_type_target_id
-          table: node__field_ct_service_type
-          field: field_ct_service_type_target_id
-          relationship: reverse__node__field_ct_cashflow_project
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_ct_service_type_target_id_op
-            label: 'Service Type (field_ct_service_type)'
-            description: ''
-            use_operator: false
-            operator: field_ct_service_type_target_id_op
-            identifier: field_ct_service_type_target_id
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: select
-          limit: true
-          vid: vocab_service_type
-          hierarchy: false
-          error_message: true
-          plugin_id: taxonomy_index_tid
       sorts: {  }
-      title: 'Cash inflow bar project'
+      title: aaa
       header: {  }
       footer: {  }
       empty: {  }
@@ -313,29 +280,27 @@ display:
       arguments: {  }
       display_extenders: {  }
       group_by: true
-      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
-        - user
+        - url.query_args
         - user.permissions
       tags: {  }
-  block_1:
-    display_plugin: block
-    id: block_1
-    display_title: Block
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
     position: 1
     display_options:
       display_extenders: {  }
+      path: aaa
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
-        - user
+        - url.query_args
         - user.permissions
       tags: {  }
