--- a/sites/default/site-config/core.entity_view_display.user.user.default.yml
+++ b/sites/default/site-config/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_name
+    - field.field.user.user.field_salary
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -15,6 +17,21 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_name:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_salary:
+    weight: 7
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
   member_for:
     weight: 5
   user_picture:
